[package]
name = "sim_engine"
version = "0.1.0"
edition = "2018"

[features]

[[bin]]
name = "main"
path = "src/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "*"
piston2d-opengl_graphics = "*"
piston = "*"


[dev-dependencies]
pistoncore-sdl2_window = "0.68.0"
rand = "0.6.0"