[package]
name = "sim_engine"
version = "0.1.0"
edition = "2018"

[features]

[[bin]]
name = "main"
path = "src/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.32.2", features = ["bundled", "static-link"] }
gl = "0.14.0"


[dev-dependencies]
rand = "0.6.0"